--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Hello world</title>
+    <link rel="stylesheet" type="text/css" href="./build/bundle.css" />
   </head>
   <body>
     <div id="root"></div>
